; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_sta.c_iwl_mvm_add_bcast_sta.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_sta.c_iwl_mvm_add_bcast_sta.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_mvm = type { i32 }
%struct.ieee80211_vif = type { i32 }
%struct.iwl_mvm_int_sta = type { i32 }
%struct.iwl_mvm_vif = type { i32, i32 }

@iwl_mvm_add_bcast_sta.baddr = internal constant [6 x i32] [i32 255, i32 255, i32 255, i32 255, i32 255, i32 255], align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iwl_mvm_add_bcast_sta(%struct.iwl_mvm* %0, %struct.ieee80211_vif* %1, %struct.iwl_mvm_int_sta* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.iwl_mvm*, align 8
  %6 = alloca %struct.ieee80211_vif*, align 8
  %7 = alloca %struct.iwl_mvm_int_sta*, align 8
  %8 = alloca %struct.iwl_mvm_vif*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.iwl_mvm* %0, %struct.iwl_mvm** %5, align 8
  store %struct.ieee80211_vif* %1, %struct.ieee80211_vif** %6, align 8
  store %struct.iwl_mvm_int_sta* %2, %struct.iwl_mvm_int_sta** %7, align 8
  %11 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %6, align 8
  %12 = call %struct.iwl_mvm_vif* @iwl_mvm_vif_from_mac80211(%struct.ieee80211_vif* %11)
  store %struct.iwl_mvm_vif* %12, %struct.iwl_mvm_vif** %8, align 8
  %13 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %14 = getelementptr inbounds %struct.iwl_mvm, %struct.iwl_mvm* %13, i32 0, i32 0
  %15 = call i32 @lockdep_assert_held(i32* %14)
  %16 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %17 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %6, align 8
  %18 = call i32 @iwl_mvm_mac_get_queues_mask(%struct.iwl_mvm* %16, %struct.ieee80211_vif* %17)
  store i32 %18, i32* %9, align 4
  %19 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %20 = load %struct.iwl_mvm_int_sta*, %struct.iwl_mvm_int_sta** %7, align 8
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @iwl_mvm_allocate_int_sta(%struct.iwl_mvm* %19, %struct.iwl_mvm_int_sta* %20, i32 %21)
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %10, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %3
  %26 = load i32, i32* %10, align 4
  store i32 %26, i32* %4, align 4
  br label %45

27:                                               ; preds = %3
  %28 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %29 = load %struct.iwl_mvm_int_sta*, %struct.iwl_mvm_int_sta** %7, align 8
  %30 = load %struct.iwl_mvm_vif*, %struct.iwl_mvm_vif** %8, align 8
  %31 = getelementptr inbounds %struct.iwl_mvm_vif, %struct.iwl_mvm_vif* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.iwl_mvm_vif*, %struct.iwl_mvm_vif** %8, align 8
  %34 = getelementptr inbounds %struct.iwl_mvm_vif, %struct.iwl_mvm_vif* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @iwl_mvm_add_int_sta_common(%struct.iwl_mvm* %28, %struct.iwl_mvm_int_sta* %29, i32* getelementptr inbounds ([6 x i32], [6 x i32]* @iwl_mvm_add_bcast_sta.baddr, i64 0, i64 0), i32 %32, i32 %35)
  store i32 %36, i32* %10, align 4
  %37 = load i32, i32* %10, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %27
  %40 = load %struct.iwl_mvm*, %struct.iwl_mvm** %5, align 8
  %41 = load %struct.iwl_mvm_int_sta*, %struct.iwl_mvm_int_sta** %7, align 8
  %42 = call i32 @iwl_mvm_dealloc_int_sta(%struct.iwl_mvm* %40, %struct.iwl_mvm_int_sta* %41)
  br label %43

43:                                               ; preds = %39, %27
  %44 = load i32, i32* %10, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %43, %25
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local %struct.iwl_mvm_vif* @iwl_mvm_vif_from_mac80211(%struct.ieee80211_vif*) #1

declare dso_local i32 @lockdep_assert_held(i32*) #1

declare dso_local i32 @iwl_mvm_mac_get_queues_mask(%struct.iwl_mvm*, %struct.ieee80211_vif*) #1

declare dso_local i32 @iwl_mvm_allocate_int_sta(%struct.iwl_mvm*, %struct.iwl_mvm_int_sta*, i32) #1

declare dso_local i32 @iwl_mvm_add_int_sta_common(%struct.iwl_mvm*, %struct.iwl_mvm_int_sta*, i32*, i32, i32) #1

declare dso_local i32 @iwl_mvm_dealloc_int_sta(%struct.iwl_mvm*, %struct.iwl_mvm_int_sta*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
